Fix text-align

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ main {
     padding: 10px 10px;
     font-size: 25px;
     font-family: "Cairo", sans-serif;
+    text-align: justify;
 }
 
 
